# C_Introduction

./: .gitignore  CMakeLists.txt  README.md  arithmeticOperator.c  binarOperation.c  branchContro.c  clib.c  function.h  function1.c  loopControl.c  main.c  pointer.c  relationshipOperation.c  scanner.c  transmit.c  typetranform.c  variable.c
array/: arrayInduction.c  stringArray.c  stringFunction.c
base/: constant.c  main.c  variable.c
branch/: anyLoop.c  doWhileLoop.c  forLoop.c  skipLoop.c  whileLoop.c
debug/: debugInduction.c
emum/: enumeration.c
exercise/: functionExercise.c  loop.c  stars.c
file/: cFIle.c  fileInduction.c
function/: firstFunction.c  fisrtFunction.h  function.c  function.h  recursion.c  scope.c  staticFunction.c  systemFunction.c
operation/: binarOperation.c
pointer/: DynamicAllocation.c  functionPointer.c  pointerAnyArray.c  pointerArray.c  pointerCompare.c  pointerInduction.c  proposePointer.c  transmit.c
pretreatment/: macroDefinition.c  paramsMacroDefinition.c  pretreatmentInduction.c
project/crm/: customerManage.c  customerMange.c
project/famliyPay/: myAccount.c  test.c
searchSort/: bubblingSort.c  search.c  twoDimensionalArray.c
structuralMorphology/: commonMorphology.c  structuralMorphologyInduction.c  structureVariableDetail.c
